feat: add cross-platform format conversion to prevent data loss (#136)
* feat: add cross-platform format conversion to prevent data loss

Notes created on web (BlockNote) and mobile (TipTap) use different
formats. Add smart contentToTiptap/contentToBlocknote wrappers that
detect the format and convert as needed, wire them into the mobile
editor load/save paths, and add defensive conversion in the web API
for already-corrupted notes.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix: resolve TypeScript errors in notes API route

Cast Supabase Json type properly when accessing note.content for
format detection and conversion.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix: cast Supabase note to Record to access content property

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix: persist repaired content to DB and import from barrel export

Address CodeRabbit review feedback:
- Persist converted BlockNote content back to Supabase so future reads
  don't need re-conversion (fire-and-forget update)
- Import test helpers from package barrel to exercise public API

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* test: add unit test for TipTap-to-BlockNote conversion in GET route

Covers the defensive conversion path and verifies the DB persist call.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* test: add cross-platform format sync E2E tests (Playwright + Maestro)

Playwright tests verify:
- TipTap content injected via API is converted to BlockNote on GET
- Notes created on web are stored in BlockNote format
- Full round-trip: web create → mobile TipTap overwrite → web reads correctly

Maestro test verifies:
- Mobile can create and edit notes with the format converter active
- Content persists after round-tripping through contentToBlocknote/contentToTiptap

Both test suites use "XPlat" prefixed titles targeting the same Supabase
dev database for cross-platform data consistency verification.

Co-Authored-By